add:opAppeal api
